Name title is fixed for mobile, overflow-x is hidden

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -100,9 +100,10 @@ section {
         h1 {
             color: #f8edeb;
             font-size: 44px;
-            margin: 0;
+            margin: 0 ;
             font-family: 'La Belle Aurore';
             font-weight: 400;
+            width: 250px;
     
             &::before, &::after {
                 font-family: 'La Belle Aurore';
