--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,4 @@
-html {
-    scroll-behavior: smooth;
-}
+
 
 .nav-bar.open {
     position: fixed;
@@ -17,7 +15,7 @@ html {
 .menu {
     position: fixed;
     right: 10px;
-    padding: 15px 10px;
+    padding: 8px;
     width: 15px;
     height: 25px;
     margin: 8px;
